--- a/GroupProject/WebMVC/Views/GuestHeader.cshtml
+++ b/GroupProject/WebMVC/Views/GuestHeader.cshtml
@@ -12,7 +12,7 @@
                     <div id="navbar_menu">
                         <ul class="first-ul">
                             <li>
-                                <a class="active" href="@Url.Action("Index", "Account")">Login</a>
+                                <a href="@Url.Action("Index", "Account")">Login</a>
                             </li>
                             <li><a href="@Url.Action("Register", "Account")">Register</a></li>
                         </ul>
