--- a/GroupProject/WebMVC/Views/UserHeader.cshtml
+++ b/GroupProject/WebMVC/Views/UserHeader.cshtml
@@ -12,10 +12,10 @@
                     <div id="navbar_menu">
                         <ul class="first-ul">
                             <li>
-                                <a class="active" href="loadQuestion">Home</a>
+                                <a href="loadQuestion">Home</a>
                             </li>
                             <li><a href="@Url.Action("Index", "Cart")">Cart</a></li>
-                            <li><a href="@Url.Action("GetOrderHistory","Order")">Order History</a></li>
+                            <li><a href="@Url.Action("GetOrderHistory","Order", new { status="Verifying"})">Order History</a></li>
                             <li><a href="logout">Logout</a></li>
                         </ul>
                     </div>
