--- a/GroupProject/WebMVC/Views/AdminHeader.cshtml
+++ b/GroupProject/WebMVC/Views/AdminHeader.cshtml
@@ -12,7 +12,7 @@
                     <div id="navbar_menu">
                         <ul class="first-ul">
                             <li>
-                                <a class="active" href="loadQuestion">Home</a>
+                                <a href="loadQuestion">Home</a>
                             </li>
                             <li><a href="@Url.Action("Create", "Bag")">Create new Bag</a></li>
                             <li><a href="createForm.jsp">Report Order</a></li>
