--- a/GroupProject/WebMVC/Views/Cart.cshtml
+++ b/GroupProject/WebMVC/Views/Cart.cshtml
@@ -10,6 +10,7 @@
     <title>Cart</title>
     <link href="~/Content/alertifyjs/alertify.min.css" rel="stylesheet" />
     <link href="~/Content/alertifyjs/themes/default.min.css" rel="stylesheet" />
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
     <link href="~/css/style_1.css" rel="stylesheet" />
 </head>
@@ -26,7 +27,7 @@
                 <table border="1" class="table table-bordered" style="width: 800px; margin-right: 50px; height: 310px;">
                     <thead>
                         <tr>
-                            <th scope="col">Food name</th>
+                            <th scope="col">Bag</th>
                             <th scope="col">Amount</th>
                             <th scope="col">Price</th>
                             <th scope="col">Total</th>
@@ -63,7 +64,7 @@
                                     </div>
                                 </td>
                                 <td>
-                                    <a onclick="Delete('@bag.BagID')">Remove</a>
+                                    <a onclick="Delete('@bag.BagID')"><i class="fas fa-trash-alt"></i>Remove</a>
                                 </td>
                             </tr>
                         }
@@ -73,7 +74,7 @@
                             </td>
                             <td></td>
                             <td>
-                                @Model.Total $
+                                Total: @Model.Total $
                             </td>
                             <td>
                             </td>
