--- a/GroupProject/WebMVC/Views/OrderHistory.cshtml
+++ b/GroupProject/WebMVC/Views/OrderHistory.cshtml
@@ -10,6 +10,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Shopping History</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
     <link href="~/css/style_1.css" rel="stylesheet" />
 </head>
@@ -22,7 +23,47 @@
     </div>
     <div class="container" style="margin-top: 50px;">
         <div class="row" style="margin-top: 50px;">
-            @if (Model != null&& Model.Length>0)
+            <ul class="nav nav-tabs" id="myDIV">
+                <li class="nav-item">
+                    @if (Request.Params["status"].Equals("Verifying"))
+                    {
+
+                        <a class="myLink active" aria-current="page" href="@Url.Action("GetOrderHistory","Order", new { status="Verifying"})">Verifying</a>
+
+                    }
+                    else
+                    {
+                        <a class="myLink" aria-current="page" href="@Url.Action("GetOrderHistory","Order", new { status="Verifying"})">Verifying</a>
+
+                    }
+                </li>
+                <li class="nav-item">
+                    @if (Request.Params["status"].Equals("Processing"))
+                    {
+
+                        <a class="myLink active" href="@Url.Action("GetOrderHistory","Order", new { status="Processing"})">Processing</a>
+
+                    }
+                    else
+                    {
+                        <a class="myLink" href="@Url.Action("GetOrderHistory","Order", new { status="Processing"})">Processing</a>
+
+                    }
+                </li>
+                <li class="nav-item">
+                    @if (Request.Params["status"].Equals("Completed"))
+                    {
+
+                        <a class="myLink active" href="@Url.Action("GetOrderHistory","Order", new { status="Completed"})">Completed</a>
+                    }
+                    else
+                    {
+                        <a class="myLink" href="@Url.Action("GetOrderHistory","Order", new { status="Completed"})">Completed</a>
+                    }
+
+                </li>
+            </ul>
+            @if (Model != null && Model.Length > 0)
             {
                 foreach (var item in Model)
                 {
@@ -52,7 +93,20 @@
                             </tr>
                             <tr>
                                 <th style="width: 200px;">Status</th>
-                                <td>@item.status</td>
+                                <td>
+                                    @if (item.status.Equals("Verifying"))
+                                    {
+                                        <font color="purple">@item.status</font>
+                                    }
+                                    else if (item.status.Equals("Completed"))
+                                    {
+                                        <font color="green">@item.status</font>
+                                    }
+                                    else if (item.status.Equals("Processing"))
+                                    {
+                                        <font color="blue">@item.status</font>
+                                    }
+                                </td>
                             </tr>
                         </table>
                     </div>
