--- a/GroupProject/WebMVC/Views/GuestHeader.cshtml
+++ b/GroupProject/WebMVC/Views/GuestHeader.cshtml
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
                 <!-- logo start -->
-                <div class="logo"> <a href="loadQuestion"><img src="~/img/logo.png" alt="logo" /></a> </div>
+                <div class="logo"> <a href="@Url.Action("Index", "Home")"><img src="~/img/logo.png" alt="logo" /></a> </div>
                 <!-- logo end -->
             </div>
             <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
