--- a/GroupProject/WebMVC/Views/UserHeader.cshtml
+++ b/GroupProject/WebMVC/Views/UserHeader.cshtml
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
                 <!-- logo start -->
-                <div class="logo"> <a href="loadQuestion"><img src="~/img/logo.png" alt="logo" /></a> </div>
+                <div class="logo"> <a href="@Url.Action("Customer", "Home")"><img src="~/img/logo.png" alt="logo" /></a> </div>
                 <!-- logo end -->
             </div>
             <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
@@ -12,11 +12,11 @@
                     <div id="navbar_menu">
                         <ul class="first-ul">
                             <li>
-                                <a href="loadQuestion">Home</a>
+                                <a href="@Url.Action("Customer", "Home")">Home</a>
                             </li>
                             <li><a href="@Url.Action("Index", "Cart")">Cart</a></li>
                             <li><a href="@Url.Action("GetOrderHistory","Order", new { status="Verifying"})">Order History</a></li>
-                            <li><a href="logout">Logout</a></li>
+                            <li><a href="@Url.Action("Logout", "Account")">Logout</a></li>
                         </ul>
                     </div>
                     <!-- menu end -->
