Update link to back to Homepage

--- a/GroupProject/WebMVC/Views/Login.cshtml
+++ b/GroupProject/WebMVC/Views/Login.cshtml
@@ -15,7 +15,7 @@
         <div>
             @using (Html.BeginForm("Login", "Account", FormMethod.Post))
             {
-            <font color="red">@Html.ValidationSummary(true, "", new { htmlAttributes = new { @class = "text-danger" } })</font>
+                <font color="red">@Html.ValidationSummary(true, "", new { htmlAttributes = new { @class = "text-danger" } })</font>
                 <p>Username</p>
                 <div class="textbox">
                     <input type="text" placeholder="Enter username" name="Username" value="" />
@@ -29,6 +29,7 @@
 
                 </div>
                 <input class="btn" value="Login" name="action" type="submit" />
+                <label>Back to Homepage ?</label> <a href="@Url.Action("Index", "Home")"> Login </a>
             }
         </div>
     </div>
