--- a/GroupProject/WebMVC/Views/Register.cshtml
+++ b/GroupProject/WebMVC/Views/Register.cshtml
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/64d58efce2.js"
             crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
     <link rel="stylesheet" href="~/css/style.css">
 </head>
 <body>
@@ -14,21 +15,21 @@
         <img src="~/img/avatar.png" class="avatar">
         <h1>REGISTER</h1>
         <div>
-            @using (Html.BeginForm("Login", "Account", FormMethod.Post))
+            @using (Html.BeginForm("Register", "Account", FormMethod.Post))
             {
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <label>Fullname</label> @Html.EditorFor(model => model.FullName, new{htmlAttributes = new { @class = "normal", @placeholder = "Enter full name" }})
-                @Html.ValidationMessageFor(model => model.FullName, "", new { @class = "text-danger" })
-                <label>Username</label> @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "normal", @placeholder = "Enter username" } })
-                @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
-                <label>Phone Number</label> @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "normal", @placeholder = "Enter phone number" } })
-                @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
-                <label>Address</label> @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "normal", @placeholder = "Enter address" } })
-                @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
-                <label>Password</label> @Html.PasswordFor(model => model.Password, new { @class = "normal", @placeholder = "Enter password"  })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-                <label>Confirm Password</label> @Html.PasswordFor(model => model.Password, new { @class = "normal", @placeholder = "Re-enter password" })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                <label>Fullname</label> @Html.EditorFor(model => model.FullName, new{htmlAttributes = new { @class = "normal", @placeholder = "Enter full name", @required = "required" } })
+                @Html.ValidationMessageFor(model => model.FullName, "", new { @class = "text-danger" })<br />
+                <label>Username</label> @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "normal", @placeholder = "Enter username", @required = "required" } })
+                @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })<br/>
+                <label>Phone Number</label> @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "normal", @placeholder = "Enter 10 number, start with 0", @required = "required", @pattern = "0[0-9]{9}" } })
+                @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })<br />
+                <label>Address</label> @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "normal", @placeholder = "Enter address", @required = "required" } })
+                @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })<br />
+                <label>Password</label> @Html.PasswordFor(model => model.Password, new { @class = "normal", @placeholder = "Enter password", @required = "required", @minlength = "6" })
+                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })<br />
+                <label>Confirm Password</label> @Html.Password("Repassword","",new { @class = "normal", @placeholder = "Re-enter password", @required = "required", @minlength = "6" })
+                @Html.ValidationMessage("Repassword", "", new { @class = "text-danger" })<br />
                 <input type="submit" class="btn" value="Register" /><br><br>
                 <label>Already have account ?</label> <a href="@Url.Action("Index", "Account")"> Login </a>
             }
