--- a/GroupProject/WebMVC/Views/User.cshtml
+++ b/GroupProject/WebMVC/Views/User.cshtml
@@ -68,6 +68,9 @@
                                     <div class="center">
                                         <input type="submit" name="action" value="Add to Cart" class="btn btn-primary" style="margin-top: 20px;" />
                                         <input type="hidden" value="@bag.BagID" name="ID" />
+                                        <input type="hidden" value="@Name" name="Name" />
+                                        <input type="hidden" value="@Cate" name="Cate" />
+                                        <input type="hidden" value="@ViewBag.pageCurrent" name="page" />
                                     </div>
                                 </div>
                             }
